--- a/assets2/sass/layout/_main.scss
+++ b/assets2/sass/layout/_main.scss
@@ -1,5 +1,5 @@
 ///
-/// Future Imperfect by HTML5 UP
+/// Phantom by HTML5 UP
 /// html5up.net | @ajlkn
 /// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 ///
@@ -7,7 +7,9 @@
 /* Main */
 
 	#main {
-		@include vendor('flex-grow', '1');
-		-ms-flex: 1;
-		width: 100%;
+		@include padding(5em, 0, (-5em, 0, 3em, 0));
+
+		@include breakpoint('<=small') {
+			@include padding(3em, 0, (-3em, 0, 3em, 0));
+		}
 	}
